# ForgeQL

./: .gitignore  README.md  docker-compose.yml
C/test/: LinkedList.h
backend/: .gitignore  README.md  pom.xml
backend/src/main/java/: implementation.md
backend/src/main/resources/: application.properties  docker-compose.yaml  env.properties  schema.json
docker/: backend.Dockerfile  frontend.Dockerfile
frontend/: .gitignore  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: accountApi.ts  dataSourceApi.ts  http.ts  queryApi.ts  runtimeApi.ts
frontend/src/auth/: AuthProvider.tsx
frontend/src/components/: AnimatedSelect.tsx  AuthLayout.tsx  QueryBuilder.tsx  ResponsePanel.tsx  SchemaPanel.tsx
frontend/src/components/rbac/: DatasourceAccessModal.tsx  RoleBadge.tsx  UserManagementPanel.tsx
frontend/src/components/ui/: Button.tsx  Dropdown.tsx  Modal.tsx  Table.tsx
frontend/src/data/: schema.ts
frontend/src/hooks/: useDatasourceAccessManagement.ts  useDatasources.ts  useElegantAnimations.ts  useUserManagement.ts
frontend/src/lib/: appState.ts  platform.ts
frontend/src/pages/: ConnectionRequestPage.tsx  LandingPage.tsx  LoginPage.tsx  PlaygroundPage.tsx  SignUpPage.tsx
frontend/src/services/: api.ts
frontend/src/test/: setup.ts
frontend/src/test/auth/: auth-flow.test.tsx
frontend/src/test/utils/: fetchMock.ts  (+2 more)
frontend/src/types/: platform.ts
scripts/: build.sh  clean.sh  run.sh  test.sh
src/main/resources/: application.properties  docker-compose.yaml
test/: CMakeLists.txt
(+444 files in other folders)
